--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -1,6 +1,5 @@
 <div id="sys-message">
-	<h3 style='margin: 0; color: #d00'>Server Updates - Restarting Services</h3>
-	Afternoon of Nov 8th - I'll be doing some testing and updates on the server itself. 
-	During this time, I'll be occasionally restarting some of the applications that run D3Up, so if something doesn't load, give it a second and try again.
+	<h3 style='margin: 0; color: #0d0'>Server Updates - Complete (PS - Hellfire Rings sync now!)</h3>
+	Updates are complete on the server. If you EVER run into a error page, please contact me. I'm hoping with all the changes the server will handle all the traffic a bit better and not cause as many errors. 
 	Please report any bugs via the feedback tab or email me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
 </div>
