removed button class

--- a/application/layouts/scripts/_menu.phtml
+++ b/application/layouts/scripts/_menu.phtml
@@ -82,7 +82,7 @@
 					<div class="col_2">
 						<ul class="dropdown_links">
 							<? if($this->profile): ?>
-								<li><a class="button" href="/user/items">My Items</a></li>
+								<li><a href="/user/items">My Items</a></li>
 							<? endif ?>
 							<li><a href="/user/shop">My Shop</a></li>
 							<li><a href="/item/sales-history">Sales History</a></li>
