Added new button to my items

--- a/application/views/scripts/user/items-body.phtml
+++ b/application/views/scripts/user/items-body.phtml
@@ -13,8 +13,9 @@
 																						'slotType' => $this->slotType,
 																					)); ?>
 	    <div class='button-bar'>
+	      <a class='button' href='/item/create'>New</a>
 	      <a class='button delete-selected'>Delete Selected</a>
-	      <a class='button' href='/user/delete-items'>Delete All Items</a>
+	      <a class='button' href='/user/delete-items'>Delete All</a>
 	    </div>
 		</td>
 	</tr>
