Removed link from My D3Up.

--- a/application/layouts/scripts/menu/user.phtml
+++ b/application/layouts/scripts/menu/user.phtml
@@ -1,5 +1,5 @@
-<h5><a href="/" class="drop">My D3Up.com</a></h5>
-<span><a href="/" class="drop">Builds, Guides and Items</a></span>
+<h5><a href="#" class="drop">My D3Up.com</a></h5>
+<span><a href="#" class="drop">Builds, Guides and Items</a></span>
 <div class="dropdown_3columns">
 	<div class="col_1 col_first">
 		<h2 style="margin-bottom: 0">Quick Access</h2>
