--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -1,5 +1,5 @@
 <div id="sys-message">
-	<h3 style='margin: 0; color: #0d0'>Server Updates - Complete (PS - Hellfire Rings sync now!)</h3>
-	Updates are complete on the server. If you EVER run into a error page, please contact me. I'm hoping with all the changes the server will handle all the traffic a bit better and not cause as many errors. 
+	<h3 style='margin: 0; color: #0d0'>Join the /r/diablo IRC Chat!</h3>
+	The /r/diablo crew has established a great chat room, located on irc.esper.net in the #diablo channel. So I added <a href="http://chat.d3up.com">chat.d3up.com</a> so you can join in from a browser! You'll notice a chat icon on the menu bar, click it to get started!
 	Please report any bugs via the feedback tab or email me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
 </div>
