--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -1,5 +1,10 @@
 <div id="sys-message">
+	<h3 style='margin: 0; color: #d00'>Battle.net Sync Issues</h3>
+	Not sure what's going on, but the Battle.net API isn't responding properly to the D3Up requests. The API is being throttled, D3Up is being blocked, or the server is hitting a bad API mirror or something. I've emailed Blizzard to check on it. 
+	Anything else please use the feedback tab or email me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
+</div>
+<!-- <div id="sys-message">
 	<h3 style='margin: 0; color: #0d0'>Join the /r/diablo IRC Chat!</h3>
 	The <a href="http://reddit.com/r/diablo">/r/diablo</a> crew has established a great chat room, located on irc.esper.net in the #diablo channel. So I added <a href="http://chat.d3up.com">chat.d3up.com</a> so you can join in from a browser! You'll notice a chat icon on the menu bar, click it to get started!
 	Please report any bugs via the feedback tab or email me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
-</div>
+</div> -->
