--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -4,7 +4,8 @@
 	<?= $this->headTitle("Diablo 3 DPS & EHP Calculator")->setSeparator(' | '); ?>
 	<meta name="description" content="Calculate your Diablo 3 Characters DPS/EHP from your gear" />
 	<meta name="keywords" content="diablo 3, dps, ehp, gear, calculator, effective health pool, tool, compare" />
-
+	
+	<link rel="shortcut icon" href="/favicon.ico" sizes="16x16 32x32 64x64 128x128">
 	<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.19/themes/dot-luv/jquery-ui.css" type="text/css" />
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.2.js"></script>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.js"></script>
