Sys Message update.

--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -4,7 +4,7 @@
 	Anything else please use the feedback tab or email me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
 </div> -->
 <div id="sys-message">
-	<h3 style='margin: 0; color: #0d0'>Join the /r/diablo IRC Chat!</h3>
-	The <a href="http://reddit.com/r/diablo">/r/diablo</a> crew has established a great chat room, located on irc.esper.net in the #diablo channel. So I added <a href="http://chat.d3up.com">chat.d3up.com</a> so you can join in from a browser! You'll notice a chat icon on the menu bar, click it to get started!
-	Please report any bugs via the feedback tab or email me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
+	<h3 style='margin: 0; color: #0d0'>Some life steal/hit mechanics</h3>
+	I've started implementing and looking closely at the <b>Skills</b> portion of builds and how they regenerate life with LoH/LS. It's not complete, but you should see the new numbers in that section including LPS (Life per Second).
+	If something seems wrong, please let me know at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
 </div>
