No chat and sys message

--- a/application/layouts/scripts/_menu.phtml
+++ b/application/layouts/scripts/_menu.phtml
@@ -161,9 +161,9 @@
 			<li class='social'>
 			  <a href="http://facebook.com/d3upgrade"><img src='/images/f_logo.png'/></a>
 			</li>
-      <li id="irc-chat" data-name="/r/diablo IRC Chat" data-tooltip="Click to join the /r/diablo chat channel!<br/><br/>If you have your own IRC client, feel free to connect via: <ul><li>Server: irc.esper.net</li><li>Channel: #diablo</li></ul>" class='social'>
+      <!-- <li id="irc-chat" data-name="/r/diablo IRC Chat" data-tooltip="Click to join the /r/diablo chat channel!<br/><br/>If you have your own IRC client, feel free to connect via: <ul><li>Server: irc.esper.net</li><li>Channel: #diablo</li></ul>" class='social'>
         <a href="http://chat.d3up.com"><img src='/images/irc_chat.png'/></a>
-      </li>
+      </li> -->
 		</ul>	
 	</div>
 </div>
