--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -4,7 +4,7 @@
 	Anything else please use the feedback tab or email me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
 </div> -->
 <div id="sys-message">
-	<h3 style='margin: 0; color: #0d0'>Some life steal/hit mechanics</h3>
-	I've started implementing and looking closely at the <b>Skills</b> portion of builds and how they regenerate life with LoH/LS. It's not complete, but you should see the new numbers in that section including LPS (Life per Second).
+	<h3 style='margin: 0; color: #0d0'>An easy to remember link to all your builds (to share)</h3>
+	You can link someone quickly to all of your builds now like this: <a href="http://d3up.com/tag/jesta-1121">http://d3up.com/tag/jesta-1121</a>. Just remember that it's just /tag/ + your BattleTag, with a - instead of a #. It will not show builds you mark as private.
 	If something seems wrong, please let me know at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
 </div>
