Removed the ItemDB portion of the site for now.

--- a/application/layouts/scripts/_menu.phtml
+++ b/application/layouts/scripts/_menu.phtml
@@ -76,8 +76,8 @@
 	      </div>
 			</li>
 			<li>
-				<h5><a href="/items" class="drop">Items</a></h5>
-				<span><a href="/items" class="drop">Item DB</a></span>
+				<h5><a href="#" class="drop">Items</a></h5>
+				<span><a href="#" class="drop">Item Tools</a></span>
 				<div class="dropdown_2columns">
 					<div class="col_2">
 						<ul class="dropdown_links">
@@ -85,8 +85,6 @@
 								<li><a href="/user/items">My Items</a></li>
 							<? endif ?>
 							<li><a href="/user/shop">My Shop</a></li>
-							<li><a href="/item/sales-history">Sales History</a></li>
-							<li><a href="/item">All Items</a>
 						</ul>   
 						<a class='button' href="/item/create">Create New Item</a>
 					</div>
