Simulate to change Set Bonus

--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -2317,3 +2317,10 @@ div#statistics {
 	font-size: 12px;
 	color: #B18135;
 }
+.simulate-select {
+  
+}
+.simulate-select select {
+  width: 30%;
+  margin: 0 5px;
+}
