--- a/application/views/scripts/record/resync.phtml
+++ b/application/views/scripts/record/resync.phtml
@@ -8,6 +8,9 @@
 	}	
 ?>
 <div id="build">
+	<div style="display: none">
+	  <?= $this->render("./record/build/header.phtml") ?>
+	</div>
 	<div id="character" class="ui-helper-clearfix" data-id="<?= $this->record->id ?>" data-class="<?= $this->record->class ?>" <? if($this->myBuild) { echo "data-owner='true'"; } ?>>
 	  <div class="notifications">
 			<h2>One Moment...</h2>
@@ -121,8 +124,8 @@
       // BuildV2 Scripts for This Page
       // ------------------------------
       var skills = {
-            actives: <?= json_encode(($this->record->actives instanceOf Shanty_Mongo_Document) ? $this->record->actives->export() : array()); ?>,
-            passives: <?= json_encode(($this->record->passives instanceOf Shanty_Mongo_Document) ? $this->record->passives->export() : array()); ?>
+            actives: <?= json_encode(($this->record->actives instanceOf Shanty_Mongo_Document) ? $this->record->actives->export() : $this->record->actives); ?>,
+            passives: <?= json_encode(($this->record->passives instanceOf Shanty_Mongo_Document) ? $this->record->passives->export() : $this->record->passives); ?>
           },
           gearSlots = $("#build-gear .equipped"),
           gear = gearSlots.find("a[data-json]"),
