--- a/application/views/scripts/record/build.phtml
+++ b/application/views/scripts/record/build.phtml
@@ -19,16 +19,31 @@
 	  </div>
 	  <? endif ?>
     <ul id="tabs">
+			<?
+				$hasGroups = false;
+				$hasDescription = false;
+				$defaultToDescription = false;
+				if($this->record->description && strlen($this->record->description) > 2) {
+					if($this->record->_defaultToDescription) {
+						$defaultToDescription = true;				
+					}
+					$hasDescription = true;					
+				}
+				if(count($this->record->groups) > 0) {
+					$hasGroups = true;
+				}
+			?>
+			<? if($hasDescription || $hasGroups): ?>
+      <li class='divider'>Meta</li>
+			<? if($hasDescription): ?>
+			<li><a data-tab="#information" class="button<?= ($defaultToDescription) ? " current": "" ?>">Information</a></a></li>
+			<? endif; ?>
+			<? if($hasGroups || $myBuild): ?>
+			<li><a data-tab="#groups" class="button">Groups</a></a></li>
+			<? endif; ?>
+			<? endif; // Has either groups or descriptions ?>
       <li class='divider'>Build</li>
-			<? if($this->record->description && strlen($this->record->description) > 2 && $this->record->_defaultToDescription): ?>
-			<li><a data-tab="#information" class="button current">Information</a></a></li>
-      <li><a data-tab="#gear" class="button">Gear</a></a></li>
-			<? else: ?>
-      <li><a data-tab="#gear" class="button current">Gear</a></a></li>
-				<? if(strlen($this->record->description) > 2): ?>
-				<li><a data-tab="#information" class="button">Information</a></a></li>
-				<? endif ?>
-			<? endif ?>
+      <li><a data-tab="#gear" class="button<?= (!$defaultToDescription) ? " current": "" ?>">Gear</a></a></li>
       <li><a data-tab="#skills" class="button">Skills</a></li>
       <li><a data-tab="#passives" class="button">Passives</a></li>
       <li><a data-tab="#buffs" class="button">Buffs</a></li>
@@ -51,7 +66,12 @@
       <li><a data-tab="#share" class="button">Share</a></li> -->
     </ul>
     <div id="tabs-render" class="content-page">
+			<? if($hasDescription): ?>
       <div id="information"><?= $this->render("./record/build/description.phtml") ?></div>
+			<? endif ?>
+			<? if($hasGroups || $myBuild): ?>
+      <div id="groups"><?= $this->render("./record/build/groups.phtml") ?></div>
+			<? endif ?>
       <div id="gear"><?= $this->render("./record/build/gear.phtml") ?></div>
       <div id="skills"><?= $this->render("./record/build/skills.phtml") ?></div>
       <div id="passives"><?= $this->render("./record/build/passives.phtml") ?></div>
