--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -2325,3 +2325,13 @@ div#statistics {
   width: 30%;
   margin: 0 5px;
 }
+.group-member {
+ border: 1px solid #333;
+ padding: 5px;
+ margin: 5px;
+}
+.group-member img {
+  width: 20px;
+  height: 20px;
+  margin-right: 5px;
+}
