--- a/application/views/scripts/record/build.phtml
+++ b/application/views/scripts/record/build.phtml
@@ -29,7 +29,7 @@
 					}
 					$hasDescription = true;					
 				}
-				if(count($this->record->groups) > 0) {
+				if(count($this->groups) > 0) {
 					$hasGroups = true;
 				}
 			?>
