--- a/application/views/scripts/group/create.phtml
+++ b/application/views/scripts/group/create.phtml
@@ -6,7 +6,7 @@
 		<h5 style='color: #B18135'>Create a Group</h5>
 		<h2><a href="/build/create">Create a Group of Character Builds</a></h2>
 		<div class='section-preview'>
-			<p>By creating a <strong>group</strong>, you will be able to add characters to it, creating a <strong>group</strong> of characters that can all be displayed on one page. Feel free to create a group for your group of friends, your clan/guild or even a group of your different characters to display on one page!</p>
+			<p>A group on D3Up is a collection of builds either of your choice or whoever wants to join. You can specify whether the group is Closed (You add all builds) or Open (Anyone can join), then you can use that link to keep tabs of all your builds or your friends!</p>
 		</div>
 	</div>
 	<div class="form">
