Added group name to the title.

--- a/application/views/scripts/group/view.phtml
+++ b/application/views/scripts/group/view.phtml
@@ -1,4 +1,5 @@
 <?
+	$this->headTitle($this->group->name . " (Group)"); 
 	$this->hasBuilds = false;
 	$this->myGroup = false;
 	$this->profile = D3Up_Auth::getInstance()->getProfile();
